UPD domain settings

--- a/sites-available/mindharmony.online.conf
+++ b/sites-available/mindharmony.online.conf
@@ -2,16 +2,16 @@ server {
     listen 8080;
     listen [::]:8080;
 
-    server_name aliot-shop.online www.aliot-shop.online;
-    return 301 https://aliot-shop.online$request_uri;
+    server_name mindharmony.online www.mindharmony.online;
+    return 301 https://mindharmony.online$request_uri;
 }
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name www.aliot-shop.online;
-    return 301 https://aliot-shop.online$request_uri;
+    server_name www.mindharmony.online;
+    return 301 https://mindharmony.online$request_uri;
 
     #ssl_certificate /etc/letsencrypt/live/cmemory.onlyne.online/fullchain.pem;
     #ssl_certificate_key /etc/letsencrypt/live/cmemory.onlyne.online/privkey.pem;
@@ -24,8 +24,8 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name cmemory.onlyne.online;
-    root /var/www/cmemory.onlyne.online/html;
+    server_name mindharmony.onlyne.online;
+    root /var/www/mindharmony.onlyne.online/html;
     index index.html index.xml;
 
     #ssl_certificate /etc/letsencrypt/live/cmemory.onlyne.online/fullchain.pem;
