--- a/sites-available/mindharmony.ru.conf
+++ b/sites-available/mindharmony.ru.conf
@@ -1,17 +1,17 @@
 server {
     listen       443 ssl;
-    server_name  aliot-shop.ru;
+    server_name  mindharmony.ru;
 
     location / {
 	if (!-e $request_filename){
     	    rewrite ^(.*)$ /index.html break;
     	}
-        root   /var/www/aliot-shop.ru;
+        root   /var/www/mindharmony.ru;
         index  index.html index.htm;
     }
 
-    ssl_certificate     /var/www/certs/aliot-shop.ru.pub;
-    ssl_certificate_key /var/www/private/aliot-shop.ru.key;
+    ssl_certificate     /var/www/certs/mindharmony.ru.pub;
+    ssl_certificate_key /var/www/private/mindharmony.ru.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
@@ -19,6 +19,6 @@ server {
 
 server {
     listen 80;
-    server_name aliot-shop.ru www.aliot-shop.ru;
-    return 301 https://aliot-shop.ru$request_uri;
+    server_name mindharmony.ru www.mindharmony.ru;
+    return 301 https://mindharmony.ru$request_uri;
 }
